fixed issue with search-container background image not being visible

--- a/src/main/StaticFrontend/css/index.css
+++ b/src/main/StaticFrontend/css/index.css
@@ -727,8 +727,6 @@ width: 150px;
 }
 
 .search-container{
-    z-index: 1000;
-    background-image: url('../webapp/pub/images/index-search-bg.png') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
